[tool.poetry]
name = "recolor-image-app"
version = "0.1.0"
description = ""
authors = ["imarin309 <16imarin309@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "1.40.0"
opencv-python = "^4.11.0.86"
streamlit-drawable-canvas = "^0.9.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
